--- a/charts/cla/templates/secrets.yaml
+++ b/charts/cla/templates/secrets.yaml
@@ -1,27 +1,26 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: github-credentials
-  namespace: {{ .Values.namespace }}
+  name: '{{ template "cla.fullname" . }}-mongodb-credentials'
   labels:
-    name: github credentials
-  annotations:
-    description: Github credentials
-data:
-  secret: {{ .Values.github.secret | default  "GITHUB_SECRET" | b64enc }}
-  pass: {{ .Values.github.password | default  "GITHUB_PASSWORD" | b64enc }}
-  token: {{ .Values.github.token | default  "GITHUB_TOKEN" | b64enc }}
-
----
-
-apiVersion: v1
-kind: Secret
-metadata:
-  name: mongodb credentials
-  namespace: {{ .Values.namespace }}
-  labels:
-    name: mongodb credentials
+    name: 'mongodb-credentials'
   annotations:
     description: MongoDB Credentials
 data:
   uri: {{ "mongodb://{{.Values.mongodb.mongodbUsername}}:{{.Values.mongodb.mongodbPassword}}@mongoldb:{{.Values.mongodb.service.port}}/{{.Values.mongodb.mongodbDatabase}}"  | default  "MONGODB mongodb://<user>:<password>@<host>:<port>/<dbname>" | b64enc }}
+
+---
+
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: '{{ template "cla.fullname" . }}-github-credentials'
+  labels:
+    name: 'github-credentials'
+  annotations:
+    description: GitHub Credentials
+data:
+  secret: {{ .Values.github.secret | default  "GITHUB_SECRET" | b64enc }}
+  pass: {{ .Values.github.password | default  "GITHUB_PASSWORD" | b64enc }}
+  token: {{ .Values.github.token | default  "GITHUB_TOKEN" | b64enc }}
