--- a/charts/cla/Chart.yaml
+++ b/charts/cla/Chart.yaml
@@ -19,3 +19,34 @@ version: 0.1.0
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
 appVersion: 1.16.0
+
+dependencies:
+  - name: kube-state-metrics
+    version: 2.6.*
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: kubeStateMetrics.enabled
+
+  - name: prometheus
+    version: 10.0.1
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition:  prometheus.enabled
+
+  - name: prometheus-operator
+    version: 8.5.6
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition:  prometheusOperator.enabled
+
+  - name: prometheus-node-exporter
+    version: 1.8.*
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: nodeExporter.enabled
+
+  - name: mongodb
+    version: 7.x
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: mongodb.enabled
+
+  - name: prometheus-mongodb-exporter
+    version: 2.4.0
+    repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: mongodbExporter.enabled
