--- a/charts/cla/Chart.yaml
+++ b/charts/cla/Chart.yaml
@@ -27,16 +27,19 @@ dependencies:
     condition: kubeStateMetrics.enabled
 
   - name: prometheus
+    namespace: monitoring
     version: 10.0.1
     repository: https://kubernetes-charts.storage.googleapis.com/
     condition:  prometheus.enabled
 
   - name: prometheus-operator
+    namespace: monitoring
     version: 8.5.6
     repository: https://kubernetes-charts.storage.googleapis.com/
     condition:  prometheusOperator.enabled
 
   - name: prometheus-node-exporter
+    namespace: monitoring
     version: 1.8.*
     repository: https://kubernetes-charts.storage.googleapis.com/
     condition: nodeExporter.enabled
@@ -47,6 +50,7 @@ dependencies:
     condition: mongodb.enabled
 
   - name: prometheus-mongodb-exporter
+    namespace: monitoring
     version: 2.4.0
     repository: https://kubernetes-charts.storage.googleapis.com/
     condition: mongodbExporter.enabled
