--- a/charts/cla/values.yaml
+++ b/charts/cla/values.yaml
@@ -11,25 +11,25 @@ production:
   enabled: false
 
 claAssistant:
-  host: "adasdad"
-  port: 23
-  hostPort: 80
-  protocol: "http"
+  host:
+  port:
+  hostPort:
+  protocol:
 
 github:
   client:
   user:
-  secret: "a3da5d4a65ds"
-  password: "a3da5d4a65ds"
-  token: "a3da5d4a65ds"
+  secret:
+  password:
+  token:
 
 mongodb:
-  mongodbRootPassword: "LKDJLKJDSKLJASKLJD"
+  mongodbRootPassword:
   service:
     port: 56985
-  mongodbUsername: mongol
-  mongodbPassword: "password"
-  mongodbDatabase: cla
+  mongodbUsername:
+  mongodbPassword:
+  mongodbDatabase:
 
   replicaSet:
     enabled: true
