--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,14 @@
 version: 2
 
 jobs:
+  lint:
+    docker:
+      - image: circleci/node:10.15
+    steps:
+      - checkout
+      - run: yarn
+      - run: yarn lint
+
   buildImage:
     docker:
       - image: web3f/ci-commons:v1.7.1
@@ -41,6 +49,22 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - run:
+          command: |
+          helm install --dry-run --generate-name --set \
+          claAssistant.host="CLA_ASSISTANT_HOST",\
+          claAssistant.protocol="http",\
+          claAssistant.port=80,\
+          claAssistant.hostPort=80,\
+          github.secret="GITHUB_SECRET",\
+          github.password="GITHUB_PASSWORD",\
+          github.token="GITHUB_TOKEN",\
+          mongodb.mongodbRootPassword="MONGODB_ROOT_PASSWORD",\
+          mongodb.mongodbUsername="MONGODB_USERNAME",\
+          mongodb.mongodbPassword="MONGODB_PASSWORD",\
+          mongodb.mongodbDatabase="MONGODB_DATABASE" \
+          ./charts/cla-assistant/.
+
       - run:
           command: |
             ./scripts/integration-tests.sh
