--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
       - image: web3f/ci-commons:v1.7.1
     steps:
       - checkout
+      - setup_remote_docker
       - run:
           command: |
             helm lint ./charts/cla-assistant/.
