--- a/charts/cla/values.yaml
+++ b/charts/cla/values.yaml
@@ -2,6 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 domain: cla
+environment:
 
 image:
   repository: web3f
