--- a/charts/cla/values.yaml
+++ b/charts/cla/values.yaml
@@ -1,8 +1,8 @@
 # Default values for cla-assistant.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-domain: cla
-environment:
+domain: cla.example.com
+environment: production
 
 image:
   repository: web3f
