--- a/charts/cla/templates/deployment.yaml
+++ b/charts/cla/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}/cla-assistant:latest"
+          image: "{{ .Values.image.repository }}/cla-assistant:0.0.1"
           imagePullPolicy: IfNotPresent
           env:
           - name: HOST
