--- a/charts/cla/templates/service.yaml
+++ b/charts/cla/templates/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cla.fullname" . }}
+  name: name: {{ include "cla.fullname" . }}
   labels:
     {{- include "cla.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - name: cla
-      port: {{ .Values.service.port }}
+      port: 5000
 
   selector:
     {{- include "cla.selectorLabels" . | nindent 4 }}
