--- a/charts/cla/templates/service.yaml
+++ b/charts/cla/templates/service.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: name: {{ include "cla.fullname" . }}
+  name: {{ include "cla.fullname" . }}
   labels:
     {{- include "cla.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - name: cla
-      port: 5000
-
+    - name: http
+      containerPort: {{ .Values.claAssistant.port }}
   selector:
     {{- include "cla.selectorLabels" . | nindent 4 }}
