--- a/charts/cla/templates/ingress.yaml
+++ b/charts/cla/templates/ingress.yaml
@@ -17,4 +17,4 @@ spec:
       - path: /
         backend:
           serviceName: {{ include "cla.fullname" . }}
-          servicePort: 5000
+          servicePort: {{ .Values.claAssistant.port }}
