--- a/charts/cla/templates/service.yaml
+++ b/charts/cla/templates/service.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - containerPort: 5000
+    -  port: {{ .Values.claAssistant.port }}
   selector:
     {{- include "cla.selectorLabels" . | nindent 4 }}
