--- a/charts/cla/templates/secrets.yaml
+++ b/charts/cla/templates/secrets.yaml
@@ -5,7 +5,8 @@ metadata:
   labels:
     name: 'mongodb-credentials'
 data:
-  uri: {{ "mongodb://cla-mongodb:27017"| quote | b64enc }}
+  uri: {{ .Values.claAssistant.uri  | b64enc }}
+
 ---
 apiVersion: v1
 kind: Secret
