--- a/charts/cla/values.yaml
+++ b/charts/cla/values.yaml
@@ -144,6 +144,21 @@ resources:
     cpu: 100m
     memory: 128Mi
 
+livenessProbe:
+  enabled: true
+  initialDelaySeconds: 30
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 6
+  successThreshold: 1
+readinessProbe:
+  enabled: true
+  initialDelaySeconds: 5
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 6
+  successThreshold: 1
+
 metrics:
   enabled: false
   serviceMonitor:
