--- a/charts/cla/templates/secrets.yaml
+++ b/charts/cla/templates/secrets.yaml
@@ -15,6 +15,8 @@ metadata:
   labels:
     name: 'github-credentials'
 data:
+  client: {{ .Values.github.client | default  "GITHUB_CLIENT" | b64enc }}
   secret: {{ .Values.github.secret | default  "GITHUB_SECRET" | b64enc }}
-  pass: {{ .Values.github.password | default  "GITHUB_PASSWORD" | b64enc }}
+  user: {{ .Values.github.user | default  "GITHUB_USER" | b64enc }}
   token: {{ .Values.github.token | default  "GITHUB_TOKEN" | b64enc }}
+  admins: {{ .Values.github.admins | default  "GITHUB_ADMIN" | b64enc }}
