--- a/charts/cla/templates/deployment.yaml
+++ b/charts/cla/templates/deployment.yaml
@@ -27,7 +27,7 @@ spec:
           - name: HOST
             value: {{ .Values.claAssistant.host | default "example.com" }}
           - name: PROTOCOL
-            value: https
+            value: {{ .Values.claAssistant.protocol | default "https" }}
           - name: GITHUB_CLIENT
             valueFrom:
               secretKeyRef:
@@ -48,7 +48,7 @@ spec:
               secretKeyRef:
                 name: '{{ template "cla.fullname" . }}-github-credentials'
                 key: token
-          - name: GITHUB_ADMIN
+          - name: GITHUB_ADMIN_USERS
             valueFrom:
               secretKeyRef:
                 name: '{{ template "cla.fullname" . }}-github-credentials'
