--- a/charts/cla/templates/ingress.yaml
+++ b/charts/cla/templates/ingress.yaml
@@ -5,12 +5,11 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/limit-rps: "10"
-    cert-manager.io/cluster-issuer: nameOfClusterIssuer
 spec:
   tls:
   - hosts:
       - {{ .Values.claAssistant.host | default "cla.w3f.tech" }}
-    secretName: {{ include "cla.fullname" . }}-tls
+    secretName: cla-tls
   rules:
   - host: {{ .Values.claAssistant.host | default "cla.w3f.tech" }}
     http:
