--- a/charts/cla/values.yaml
+++ b/charts/cla/values.yaml
@@ -103,7 +103,7 @@ mongodb:
     successThreshold: 1
 
   metrics:
-    enabled: false
+    enabled: true
 
     image:
       registry: docker.io
@@ -111,14 +111,14 @@ mongodb:
       tag: 0.10.0-debian-9-r77
       pullPolicy: IfNotPresent
     livenessProbe:
-      enabled: false
+      enabled: true
       initialDelaySeconds: 15
       periodSeconds: 5
       timeoutSeconds: 5
       failureThreshold: 3
       successThreshold: 1
     readinessProbe:
-      enabled: false
+      enabled: true
       initialDelaySeconds: 5
       periodSeconds: 5
       timeoutSeconds: 1
