--- a/charts/cla/templates/deployment.yaml
+++ b/charts/cla/templates/deployment.yaml
@@ -60,6 +60,11 @@ spec:
                 key: uri
           ports:
           - containerPort: {{ .Values.claAssistant.port }}
-
+          livenessProbe:
+            httpGet:
+              path: /
+              port: {{ .Values.claAssistant.port }}
+            initialDelaySeconds: 3
+            timeoutSeconds: 3
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
