set GITHUB_PASS with value of token also

--- a/charts/cla/templates/deployment.yaml
+++ b/charts/cla/templates/deployment.yaml
@@ -43,6 +43,11 @@ spec:
               secretKeyRef:
                 name: '{{ template "cla.fullname" . }}-github-credentials'
                 key: user
+          - name: GITHUB_PASS
+            valueFrom:
+              secretKeyRef:
+                name: '{{ template "cla.fullname" . }}-github-credentials'
+                key: token
           - name: GITHUB_TOKEN
             valueFrom:
               secretKeyRef:
